# simple_Triangle

./: CMakeLists.txt
